Refactor project overview and core capabilities in documentation for clarity and consistency